--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -10,6 +10,7 @@
     />
     <link rel="stylesheet" href="assets/css/style.css" />
     <script src="assets/js/main.js"></script>
+    <script src="../main.js"></script>
     <title>Project 1</title>
   </head>
   <body>
