--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -11,17 +11,68 @@
     <link rel="stylesheet" href="assets/css/style.css" />
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script>
+      // resets the page
+      function reset() {
+          window.location.reload();
+        }
       async function getByCompanyName() {
         try{
           const params = new URLSearchParams();
           params.append("companyName",document.getElementById("toSearch").value)
           const response = await axios.post(`http://localhost:3000/getByCompanyName`,params);
           const responseJson = response.data;
-          console.log(`GET:`, responseJson);
+          var arr = [];
+          for(var i=0; i<responseJson.length; i++){
+            arr.push(responseJson[i]['Company Name']);
+          }
+          var searchText = document.getElementById('toSearch').value;
+          var selectFrom = document.createElement("h2");
+          selectFrom.innerHTML = "Select from the below list for a precise result";
+          var temp = 0;
+          if(temp == 0){
+              document.getElementsByTagName('form')[0].appendChild(selectFrom);
+              temp++;
+          }
+          var select = document.createElement("select");
+          // select List code
+          for(var i=-1; i<arr.length; i++){
+              if (i == -1) {
+                var option = document.createElement("option");
+                option.setAttribute("value", "Select from below list");
+                option.appendChild(document.createTextNode("Select from the list"));
+                select.appendChild(option);
+                option.setAttribute("selected", "selected");
+                option.setAttribute("disabled", "disabled");
+              }
+              else{
+                var option = document.createElement("option");
+                option.setAttribute("value", arr[i]);
+                select.setAttribute("onchange", "display(this.value);");
+                option.appendChild(document.createTextNode(arr[i]));
+                select.appendChild(option);
+              }
+          }
+          document.getElementsByTagName('form')[0].appendChild(select);
+          // console.log(`GET:`, responseJson);
           return responseJson;
         }catch (errors) {
           console.error(errors);
         }
+      }
+      async function display(cafeName){
+        const params = new URLSearchParams();
+        params.append("companyName",cafeName)
+        const response = await axios.post(`http://localhost:3000/getByCompanyName`,params);
+        const responseJson = response.data;
+        var nameText = document.createElement("h2");
+        nameText.innerHTML = responseJson[0]['Company Name'];
+        document.getElementsByTagName('form')[0].appendChild(nameText);
+        var addressText = document.createElement("h2");
+        addressText.innerHTML = responseJson[0]['Address'];
+        document.getElementsByTagName('form')[0].appendChild(addressText);
+        var phoneText = document.createElement("h2");
+        phoneText.innerHTML = responseJson[0]['Phone'];
+        document.getElementsByTagName('form')[0].appendChild(phoneText);
       }
     </script>
     <title>Project 1</title>
