--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -2,39 +2,26 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lato:wght@100;400&family=Montserrat&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;400&family=Montserrat&family=PT+Serif:ital@0;1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css" />
+    <script src="assets/js/main.js"></script>
+
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script>
-      async function getByCompanyName() {
-        try{
-          const params = new URLSearchParams();
-          params.append("companyName",document.getElementById("toSearch").value);
-          const response = await axios.post(`http://localhost:3000/getByCompanyName`,params);
-          const responseJson = response.data;
-          console.log(`GET:`, responseJson);
-          return responseJson;
-        }catch (errors) {
-          console.error(errors);
-        }
-    }
-    </script>
     <title>Project 1</title>
   </head>
   <body>
     <div id="main">
-      <h1>Search inside the Database</h1>
-      <button onclick="reset()" id="reset">Reset</button>
+      <h2>EXPLORE THE DATABASE</h2>
+      <hr />
       <form>
-        <h2>Enter the keyword to Search</h2>
-        <input type="text" id="toSearch"></input>
-        <input type="button" id="go" onclick="getByCompanyName()" value="Go" />
+        <h3>Enter a keyword to search</h3>
+        <input type="text" id="toSearch" />
+        <input type="button" id="go" onclick="getByCompanyName()" value="Search" />
       </form>
+      <button onclick="reset()" id="reset">Another search</button>
+      <button onclick="quit()" id="quit">Quit</button>
     </div>
   </body>
 </html>
