done with the image - load left

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -12,6 +12,7 @@
     <title>Project 1</title>
   </head>
   <body>
+    <div id="img-container"></div>
     <div id="main">
       <h2>EXPLORE THE DATABASE</h2>
       <hr />
