--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -21,8 +21,8 @@
         <input type="text" id="toSearch" />
         <input type="button" id="go" onclick="getByCompanyName()" value="Search" />
       </form>
-      <button onclick="reset()" id="reset">Another search</button>
-      <button onclick="quit()" id="quit">Quit</button>
+      <input type="button" id="reset" onclick="reset()" value="Reset" />
+      <input type="button" id="quit" onclick="quit()" value="Quit" />
     </div>
   </body>
 </html>
